# finer-139-task

./: .gitattributes  .gitignore  LICENSE  README.md  mlruns.db  pyproject.toml
model/finer-debt-distilbert-cased/: config.json  model.safetensors  tokenizer_config.json
model/finer-debt-distilbert-cased/onnx/: config.json  model.onnx
research/: eda.ipynb
src/: app.py  data.py  metrics.py  tags.json  tokens.py  train.py
