[tool.poetry]
name = "finer"
version = "0.1.0"
description = "NER model for FiNER-139 subset"
authors = ["Igor Hoelscher <igor.hoelscher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"

[tool.poetry.group.dev.dependencies]
datasets = "^2.19.0"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"


[tool.poetry.group.train.dependencies]
mlflow = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
