[tool.poetry]
name = "finer"
version = "0.1.0"
description = "NER model for FiNER-139 subset"
authors = ["Igor Hoelscher <igor.hoelscher@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
datasets = "^2.19.0"
torch = {version = "^2.3.0+cu118", source = "torch"}
transformers = "^4.40.1"
onnxruntime = "^1.17.3"
accelerate = "^0.29.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
ruff = "^0.4.2"

[tool.poetry.group.train.dependencies]
mlflow = "^2.12.1"
evaluate = "^0.4.1"
seqeval = "^1.2.2"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]